src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__cast_float64_to_uint32__impl.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: UInt32,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: UInt32,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: Some(
        CastUint32ToFloat64(
            CastUint32ToFloat64,
        ),
    ),
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
